# TaoLab

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  README_AI.md  pyproject.toml
datasets/: ab_test_bandit.csv  ab_test_ecommerce.csv  ab_test_email.csv  ab_test_saas.csv  causal_401k.csv  causal_pricing_hte.csv  time_series_marketing.csv  time_series_weekly.csv
scripts/: fetch_datasets.py  install_hooks.sh  pre-commit
tao_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tao_lab/checks/: multiple_testing.py  srm.py
tao_lab/diagnose/: engine.py
tao_lab/interpret/: narrator.py
tao_lab/methods/: ab_test.py  bandit_replay.py  base.py  bayesian_ab.py  causal_inference.py  time_series.py
tao_lab/report/: generator.py
tao_lab/ui/: app.py  state.py  strings.py  theme.py
tao_lab/ui/components/: data_health.py  explainer.py  exports.py  forest_plot.py  method_card.py  metric_detail.py  metric_picker.py  prescription_card.py  stepper.py  variant_setup.py  verdict_banner.py
tao_lab/ui/frontend/: package-lock.json  package.json  prescription.html  stepper.html  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  verdict.html  vite.config.js  vite.config.ts
tao_lab/ui/frontend/scripts/: post-build.mjs
tao_lab/ui/frontend/src/: PrescriptionCard.tsx  Stepper.tsx  index.css  (+5 more)
tao_lab/ui/static/: style.css
tao_lab/ui/steps/: configure.py  data.py  diagnose.py  prescription.py  run.py
tests/: test_bandit_replay.py  test_causal_hte.py  test_final_mvp.py  test_phase2_bayesian.py  test_phase2_timeseries.py  test_phase3_causal.py
